# apache_thrift_demos

./: .gitignore  README.md  composer.json
cpp_example/: CMakeLists.txt  README.txt  myfirst.thrift
cpp_example/client/: client socket.cpp  client.cpp
cpp_example/gen-cpp/: CMakeLists.txt  MyFirstService.cpp  MyFirstService.h  MyFirstService.tcc  MyFirstService_server.skeleton.cpp  myfirst_types.cpp  myfirst_types.h  myfirst_types.tcc
cpp_example/server/: server socket.cpp  server.cpp
learning_at_ch3/: README.txt  client.py  myfirst.thrift
learning_at_ch3/gen-php/: MyFirstServer.bat  readme.txt  server.py
